<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#008B8B">


    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerShapes"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:digits="1234567890."
        android:entries="@array/Shapes" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextRadius"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:digits="1234567890."
        android:hint="@string/enterRadius" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextHeight"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:digits="1234567890."
        android:hint="@string/enterHeight" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextWidth"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:digits="1234567890."
        android:hint="@string/enterWidth" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextLength"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:digits="1234567890."
        android:hint="@string/enterLength" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextSideA"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:digits="1234567890."
        android:hint="@string/sideA" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextSideB"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:digits="1234567890."
        android:hint="@string/sideB" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextSideC"
        android:layout_centerHorizontal="true"
        android:digits="1234567890."
        android:layout_marginTop="250dp"
        android:hint="@string/sideC" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcVolButton"
        android:id="@+id/buttonCalcVolumeButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
